GH-2666 Update YetAnotherMessagesLibrary to 7.x.x, use adventure (#2666)
* Initial changes to support adventure components & update YAML to 7.x

* Bring back SecurityUtils functionality

* Remove LocaleLib

* Bring back player death messages functionality

* Fix EntityUtils

* Bring back NMS playerlist implementation

* Bring back IndividualPlayerList

* Bring back static placeholders functionality

* Bring back RankPlaceholdersService functionality

* Temporarily remove GUI with items required to create guild

* Drop some legacy check

* Make HookUtils "work"

* Make IndividualNameTag "work"

* Make IndividualPlayerList theoretically work

* Update user position permission to use Component

* Fix WorldEdit and WorldGuard hook initialization

* Use custom serializer combining ampersand and minimessage support

* Fix placeholders modifier function

* Add fallback when user has no guild for members placeholder

* Add TextColor serializer

* Remove Ranking & Top Command

* Bring back placeholderapi support

* Bring back DynmapHook functionality

* Remove FunnyFormatterTest as it completely changed behavior

* Remove PlaceholdersTest

* Bring back placeholder api support

* Fix DeputyAdminCommand

* Bring back IndividualNameTag functionality

* Bring back item related functionalities

* Bring back guild chat support

* Make HookUtils works as a Replaceable provider

* Fix PlaceholderAPI replacement